[package]
name = "pbo-packer"
version = "0.1.0"
edition = "2021"

[dependencies]
hemtt-pbo = { git = "https://github.com/BrettMayson/HEMTT" }
lazy_static = "1.4.0"
regex = "1.5.4"
serde_json = "1.0.82"
walkdir = "2.3.2"
anyhow = "1.0.57"

[dev-dependencies]
assert_cmd = "2.0.4"
predicates = "3.1.3"
tempfile = "3.3.0"
